fixes dropdown element overflow

--- a/src/indigo/less/kbc-user.less
+++ b/src/indigo/less/kbc-user.less
@@ -143,6 +143,16 @@
   .kbc-user {
     .kbc-user-name, .kbc-user-email {
       text-align: right;
+      width: 85%;
+    }
+    .kbc-user-email {
+      width: 230px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+    .dropdown-toggle {
+      max-width: 270px;
     }
     .kbc-user-email {
        color: #ddd;
